agregue logica a solicitud para que se relacionen
